--- a/1121226_animal_index.html
+++ b/1121226_animal_index.html
@@ -27,7 +27,7 @@
         }
         @media screen and (max-width:768px){
             body{
-                background-image: linear-gradient(180deg,rgba(0,0,0,0.05),rgba(0,0,0,0.8)),url(img/tree.jpg);
+                background-image: linear-gradient(180deg,rgba(0,0,0,0.05),rgba(0,0,0,0.8)),url(../img/tree.jpg);
             }
             .text01{
                 padding: 0;
